--- a/cmd/finch/doc.TEMPLATE
+++ b/cmd/finch/doc.TEMPLATE
@@ -1,12 +1,8 @@
----
-title: "{{ .CmdPath }}"
----
-
-## {{ .CmdPath }}
+# {{ .CmdPath }}
 
 {{if gt (len .Description) 0}}{{ .Description }}
 
-{{end}}{{if gt (len .Properties) 0}}### Properties
+{{end}}{{if gt (len .Properties) 0}}## Properties
 
 {{.Properties}}
 
@@ -14,29 +10,29 @@ title: "{{ .CmdPath }}"
 {{ .Usage }}
 ```{{if gt (len .Aliases) 0}}
 
-### Aliases
+## Aliases
 
 {{.Aliases}}
 {{end}}{{if gt (len .Examples) 0}}
 
-### Examples
+## Examples
 
 {{.Examples}}
 {{end}}{{if gt (len .Commands) 0}}
 
-### Commands
+## Commands
 
 ```bash
 {{ .Commands }}
 ```{{end}}{{if gt (len .Options) 0}}
 
-### Options
+## Options
 
 ```bash
 {{ .Options }}
 ```{{end}}{{if gt (len .SeeAlso) 0}}
 
-### SEE ALSO
+## SEE ALSO
 
 {{ .SeeAlso }}
 {{end}}
