--- a/.github/workflows/build-pkg.yaml
+++ b/.github/workflows/build-pkg.yaml
@@ -49,6 +49,7 @@ jobs:
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache: false
       - name: Build for macOS ${{ inputs.version }} (${{ inputs.output_arch }})
         run: |
           brew install lz4 automake autoconf libtool yq llvm
